schema/testdata/validation_operation_set_expression_unresolvable_rhs/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    operations {
        create createProfile() with (username) {
            @set(profile.identity = context.identity)
        }
    }
}
