schema/testdata/errors/operations_unique_globally.keel
model Profile {
    fields {
        username Text
    }

    actions {
        //expect-error:16:29:NamingError:There already exists an action with the name 'createProfile'
        create createProfile() with (username)
        //expect-error:16:29:NamingError:There already exists an action with the name 'createProfile'
        create createProfile() with (username)
    }
}
